--- a/examples/basicslide.css
+++ b/examples/basicslide.css
@@ -1,6 +1,25 @@
 body{
 	font-family: 'Open Sans', sans-serif;
 	text-align:center;
+    
+    
+    -webkit-user-select: none; /* Chrome/Safari */        
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+ */
+
+}
+a{
+    
+    background-color: blue;
+    color:#fff;
+    padding: 10px;
+
+    text-decoration: none;
+    
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -o-border-radius: 5px;
+    -moz-border-radius: 5px;
 }
 ul {
     position: fixed;
@@ -17,11 +36,11 @@ ul {
 }
 
 li {
-    
+    font-size:10vh;
 	float: left;
 	width: 84vw;
 	height: 80vh;
-	margin: 0 1px 0 0;
+	/*margin: 0 1px 0 0;*/
 	/*padding: 0;*/
 	/*background: #333;*/
 	color: #FFF;
@@ -33,10 +52,10 @@ li {
     -moz-border-radius: 5px;
 	cursor: pointer;
     background: #555555;
-    -webkit-transform:  scale(1);/*rotateY(-60deg)*/
-	-ms-transform:  scale(1);
-    -moz-transform:  scale(1);
-	transform: scale(1);
+    -webkit-transform:  scale(0.95);/*rotateY(-60deg)*/
+	-ms-transform:  scale(0.95);
+    -moz-transform:  scale(0.95);
+	transform: scale(0.95);
     
     
     
@@ -44,10 +63,14 @@ li {
 
 #active
 {
+    -webkit-transform:  scale(1);/*rotateY(-60deg)*/
+	-ms-transform:  scale(1);
+    -moz-transform:  scale(1);
+	transform: scale(1);
     background-color:#F00;
 }
 
 #headertext
 {
-	font-size:5vh;
+	font-size:6vh;
 }
