--- a/examples/basicslide.css
+++ b/examples/basicslide.css
@@ -21,21 +21,29 @@ a{
     -o-border-radius: 5px;
     -moz-border-radius: 5px;
 }
-ul {
+ul {margin: 0;
+    padding: 0;
     position: fixed;
     left:0;
-    display: inline;
+    /*display: inline;*/
     margin-top:6vh;
 	/*height: 80vh;*/
     height:80vh;
-    width:10000px;
+    /*width:10000px;*/
     /*width:2300px;*/
 	/*line-height: 250px;*/
-    list-style: none;
+    
+    display: flex;/*SEE: http://caniuse.com/#feat=flexbox*/
+    display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+    display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+    display: -ms-flexbox;      /* TWEENER - IE 10 */
+    display: -webkit-flex;     /* NEW - Chrome */
+  
+    list-style-type: none;
 	overflow: hidden;
 }
 
-li {
+li {margin: 0;
     font-size:10vh;
 	float: left;
 	width: 84vw;
