--- a/examples/basicslide.css
+++ b/examples/basicslide.css
@@ -2,11 +2,11 @@ body{
 	font-family: 'Open Sans', sans-serif;
 	text-align:center;
     
-    -webkit-transform: translateZ(0);
+    
     /*-webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none; */
-
+    -webkit-transform:translate3d(0,0,0);
 }
 li a{
     
@@ -30,7 +30,7 @@ ul {
     /*display: inline;*/
     margin-top:4vh;
 	/*height: 80vh;*/
-    height:80vh;
+    height:75%;
     /*width:10000px;*/
     /*width:2300px;*/
 	/*line-height: 250px;*/
@@ -43,6 +43,9 @@ ul {
   
     list-style-type: none;
 	overflow: hidden;
+    
+    /*-webkit-perspective: 1000;
+    -webkit-backface-visibility: hidden;*/
 	
 }
 
@@ -50,7 +53,7 @@ li {margin: 0;
     font-size:9vh;
 	float: left;
 	width: 84vw;
-	height: 75vh;
+	height: 100%;
 	/*margin: 0 1px 0 0;*/
 	/*padding: 0;*/
 	/*background: #333;*/
@@ -106,4 +109,20 @@ li {margin: 0;
 
     font-size:3vh;
 
+}
+
+
+
+ul.horizTranslate {
+  -webkit-transition: 0.3s ;
+  -moz-transition: 0.3s ;
+  -ms-transition: 0.3s ;
+  -o-transition: 0.3s ;
+  transition: 0.3s ;
+  -webkit-transition-timing-function: 'easeOutQuart'; /* Safari and Chrome */
+    transition-timing-function: 'easeOutQuart';
+    /*-webkit-transform: translate3d(300px,0,0);
+    -moz-transform: translateX(300px);
+    -o-transform: translate3d(300px,0,0);
+    -ms-transform: translateX(300px);*/
 }
