--- a/examples/basicslide.css
+++ b/examples/basicslide.css
@@ -1,92 +1,105 @@
 body{
-	font-family: 'Open Sans', sans-serif;
-	text-align:center;
-    
-    
+    font-family: 'Open Sans', sans-serif;
+    text-align:center;
+    /*padding:0;*/
+    margin:0;
     /*-webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none; */
     -webkit-transform:translate3d(0,0,0);
 }
+
 li a{
-    
+
     background-color: blue;
     color:#fff;
     padding: 10px;
 
     text-decoration: none;
-    
+
     border-radius: 5px;
     -webkit-border-radius: 5px;
     -o-border-radius: 5px;
     -moz-border-radius: 5px;
 }
+
 ul {
+    -webkit-backface-visibility: hidden;
+    -webkit-tap-highlight-color: transparent;
+    -webkit-touch-callout: none;
     -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+transform-style: preserve-3d;/**/
     margin: 0;
     padding: 0;
     position: fixed;
     left:0;
     /*display: inline;*/
     margin-top:4vh;
-	/*height: 80vh;*/
+    /*height: 80vh;*/
     height:75%;
     /*width:10000px;*/
     /*width:2300px;*/
-	/*line-height: 250px;*/
-    
+    /*line-height: 250px;*/
+
     display: flex;/*SEE: http://caniuse.com/#feat=flexbox*/
     display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
     display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
     display: -ms-flexbox;      /* TWEENER - IE 10 */
+
     display: -webkit-flex;     /* NEW - Chrome */
-  
+
+
     list-style-type: none;
-	overflow: hidden;
-    
+    overflow: hidden;
+
     /*-webkit-perspective: 1000;
     -webkit-backface-visibility: hidden;*/
-	
+
 }
 
 li {margin: 0;
+    padding: 0;
+    list-style-type: none;
     font-size:9vh;
-	float: left;
-	width: 84vw;
-	height: 100%;
-	/*margin: 0 1px 0 0;*/
-	/*padding: 0;*/
-	/*background: #333;*/
-	color: #FFF;
-	text-align: center;
-    
+    float: left;
+    width: 84vw;
+    height: 100%;
+    /*margin: 0 1px 0 0;*/
+    /*padding: 0;*/
+    /*background: #333;*/
+    color: #FFF;
+    text-align: center;
+
     border-radius: 5px;
     -webkit-border-radius: 5px;
     -o-border-radius: 5px;
     -moz-border-radius: 5px;
-	cursor: pointer;
+    cursor: pointer;
     background: #555555;
     -webkit-transform:  scale(0.95);
-	-ms-transform:  scale(0.95);
+    -ms-transform:  scale(0.95);
     -moz-transform:  scale(0.95);
-	transform: scale(0.95);
-    
-    
-    
+    transform: scale(0.95);
+
+
+
 }
 
 #active
 {
     -webkit-transform:  scale(1);/*rotateY(-60deg)*/
-	-ms-transform:  scale(1);
+    -ms-transform:  scale(1);
     -moz-transform:  scale(1);
-	transform: scale(1);
+    transform: scale(1);
     background-color:#F00;
 }
 
 #headertext
 {
-	font-size:6vh;
+    font-size:6vh;
 }
 
 #codetext
@@ -114,12 +127,12 @@ li {margin: 0;
 
 
 ul.horizTranslate {
-  -webkit-transition: 0.3s ;
-  -moz-transition: 0.3s ;
-  -ms-transition: 0.3s ;
-  -o-transition: 0.3s ;
-  transition: 0.3s ;
-  -webkit-transition-timing-function: 'easeOutQuart'; /* Safari and Chrome */
+    -webkit-transition: 0.3s ;
+    -moz-transition: 0.3s ;
+    -ms-transition: 0.3s ;
+    -o-transition: 0.3s ;
+    transition: 0.3s ;
+    -webkit-transition-timing-function: 'easeOutQuart'; /* Safari and Chrome */
     transition-timing-function: 'easeOutQuart';
     /*-webkit-transform: translate3d(300px,0,0);
     -moz-transform: translateX(300px);
