--- a/examples/basicslide.css
+++ b/examples/basicslide.css
@@ -32,8 +32,8 @@ ul {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-transform-style: preserve-3d;/**/
-    -webkit-transform-style: preserve-3d;
+/*transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d;*/
     margin: 0;
     padding: 0;
     position: fixed;
