Changed motion technic for a more consistent motion and for cross browser support

--- a/website-src/sliding.css
+++ b/website-src/sliding.css
@@ -1,3 +1,14 @@
+#scrolling{/*frame*/
+    top:19vh;
+    position:fixed;
+    background-color:#666;
+    height:85%;
+    width:100vw;
+    overflow: hidden;
+    /*overflow-x: scroll;
+    overflow-y: hidden;*/
+}
+
 ul {
     /*-webkit-perspective: 1000;
     -webkit-backface-visibility: hidden;*/
