Fixed lag, added a method, renamed add

--- a/website-src/sliding.css
+++ b/website-src/sliding.css
@@ -4,9 +4,9 @@
     background-color:#666;
     height:85%;
     width:100vw;
-    overflow: hidden;
-    /*overflow-x: scroll;
-    overflow-y: hidden;*/
+
+    overflow-x: scroll;/*hmmm doesn't work quite good with overflow:hidden*/
+    overflow-y: hidden;
 }
 
 ul {
