--- a/examples/fullscreen_navigation/main.css
+++ b/examples/fullscreen_navigation/main.css
@@ -31,7 +31,9 @@ ul {
 
 
     list-style-type: none;
-
+-webkit-transform-style: preserve-3d;/*YAY lag is fixed on firefox*/
+	-ms-transform-style: preserve-3d;
+	transform-style: preserve-3d;
 
 
 
