--- a/website-src/layout.css
+++ b/website-src/layout.css
@@ -11,15 +11,33 @@ header{
     position:fixed;
     left:0;
     height: 19vh;
+    background-color: #FF3B30;
+
+    color:#FFF;
 }
 
 #headertext
 {
-    margin-top:1.7vh;
+    position:absolute;
+    margin-top:4.1vh;
     font-size:8vh;
+    left:1vw;
     font-weight: 200;
 }
 
+#github
+{
+    position:relative;/**/
+    top:5vh;
+    left:25vw;
+    font-weight: 200;
+    font-size:2.1vh;
+}
+
+#github img
+{
+    height:9vh;
+}
 
 
 
@@ -27,10 +45,11 @@ header{
 
 
     position:absolute;
-    top:6vh;
+    top:4vh;
     right:1vw;
+    font-weight: 200;
     font-size:2.1vh;
-    line-height:3.5vh;
+
 
 }
 
@@ -43,11 +62,11 @@ header{
 
 #download{
 
-    background-color: #535353;
-    color:#fff;
-    padding: 1.5vh;/*10px*/
-    font-size: 6.5vmin;
 
+
+    color:#FFF;
+    font-size: 6.5vmin;
+    font-weight: 600;
     text-decoration: none;
 
     border-radius: 30px;
@@ -56,11 +75,7 @@ header{
     -moz-border-radius: 30px;
     transition: background-color 0.2s;
 }
-#download:hover{
 
-    background-color: #666;
-
-}
 
 
 
@@ -75,7 +90,10 @@ header{
 
     position:fixed;
     font-size:2.5vh;
-    bottom:1.5%;
+    bottom:0%;
+    padding: 0.5vh;
+    background-color: #333;
+    font-weight: 200;
     color:white;
     right:0;left:0;
 
