Landing page bg.

--- a/website-src/sliding.css
+++ b/website-src/sliding.css
@@ -5,7 +5,7 @@ body
 #scrolling{/*frame*/
     top:19vh;
     position:fixed;
-    background-color:#E0E0E0;
+    background-color:#C0C0C0;
     height:85%;
     width:100vw;
 
