--- a/website-src/layout.css
+++ b/website-src/layout.css
@@ -30,8 +30,10 @@ header{
     position:relative;/**/
     top:5vh;
     left:25vw;
-    font-weight: 200;
+    font-weight: 300;
     font-size:2.1vh;
+    text-decoration: none;
+    color: #FFF;
 }
 
 #github img
