--- a/examples/fullscreen_navigation/main.css
+++ b/examples/fullscreen_navigation/main.css
@@ -14,7 +14,14 @@ body {
 }
 a{
 
+    text-decoration: none;
+    padding: 10px 20px 10px 20px;
+    border-radius: 15px;
+    border-style: solid;
+    border-width: 4px;
+    border-color: #FFF;
     color: #FFF;
+
 }
 /*sliding navigation between the slides*/
 ul {
