--- a/website-src/sliding.css
+++ b/website-src/sliding.css
@@ -12,14 +12,12 @@
 }
 
 ul {
-    /*-webkit-perspective: 1000;
-    -webkit-backface-visibility: hidden;*/
 
     /*Add if you want to disable the option of selecting the text while sliding*/
-    -webkit-user-select: none;/*optional*/
-    -moz-user-select: none;/*optional*/
-    -ms-user-select: none;/*optional*/
-    user-select: none;/*optional*/
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 
 
     margin: 0;
@@ -30,14 +28,10 @@ ul {
     height:73%;
 
 
-    transform: none;
-    -moz-transform: none;
-    -webkit-transform: none;
-
 
     list-style-type: none;
 
-    -webkit-transform-style: preserve-3d;/*YAY lag is fixed on firefox*/
+    -webkit-transform-style: preserve-3d;
 	-ms-transform-style: preserve-3d;
 	transform-style: preserve-3d;
 
@@ -48,7 +42,7 @@ li {
 
     font-size:8vmin;/*cool*/
     float: left;
-    width:30vw;
+    width:25vw;
     min-width: 250px;
     height: 100%;
     color: #000;
@@ -64,7 +58,6 @@ li {
     -ms-transform:  scale(0.95);
     -moz-transform:  scale(0.95);
     transform: scale(0.95);
-    /*transition: transform 0.25s;*/
 
 
 }
