--- a/website-src/sliding.css
+++ b/website-src/sliding.css
@@ -3,7 +3,7 @@
     position:fixed;
     top:61%;
 
-    background-color:#A0A0A0;
+    background-color:#AAAAAA;
     height:35%;
     width:100vw;
 
