Added new option "parent_width" and active slide now gets class instead of id, ref #10 #11

--- a/website-src/sliding.css
+++ b/website-src/sliding.css
@@ -68,7 +68,7 @@ li {
 
 }
 
-#active
+.itemslide-active
 {/*applied to current active item*/
     -webkit-transform:  scale(1);
     -ms-transform:  scale(1);
